# spikeinterface

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  LICENSE  MANIFEST.in  README.md  SiNAPS_v_1_6_kilosortChanMap.prb  TODO_big_refactoring.txt  Untitled.ipynb  asv.conf.json  codecov.yml  conftest.py  dev_pool.py  docs_rtd.yml  environment_rtd.yml  full_requirements.txt  in_container_params.json  in_container_recording.json  in_container_sorter_script.py  installation-tips-test.yml  localise_peaks.ipynb  playground2.ipynb  playing.py  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  requirements_extractors.txt  requirements_full.txt  requirements_rtd.txt  requirements_test.txt  requirements_widgets.txt  setup.py  test_automerge.py
.github/: build_job_summary.py  detect_module_changes.py  determine_testing_environment.py  import_test.py  is_spikeinterface_dev.py  profile_and_test_imports.py  recursion_test.py  run_tests.sh
.github/scripts/: README.MD  build_job_summary.py  check_kilosort4_releases.py  create_probe_compat_fixtures.py  determine_testing_environment.py  generate_zarr_v2_fixtures.py  import_test.py  kilosort4-latest-version.json  test_kilosort4_ci.py
.github/workflows/: all-tests.yml  build-docs.yml  build-test-environment.yml  caches_cron_job.yml  codecov.yml  core-test.yml  cross_version_serialization.yml  deepinterpolation.yml  full-test-with-codecov.yml  full-test.yml  installation-tips-test.yml  issue-on-change-matlab.yml  partial-tests.yml  pre-commit-post-merge.yml  probe_backward_compat.yml  publish-to-pypi.yml  python-package.yml  python-publish.yml  ruff.yml  s3-nwb-test.yml  streaming-extractor-test.yml  test_containers_docker.yml  test_containers_singularity.yml  test_containers_singularity_gpu.yml  test_imports.yml  test_kilosort4.yml  test_memory_overflow.yml  test_recursion.yml  test_singularity_sorters.yml  test_windows.yml  test_zarr_compat.yml  testing_memory_overflow.yml
benchmarks/preprocessing/: bench_perf.py
debugging/: DELinter_session_displacement.py  _test_session_alignment.py  align_session_histograms.py  alignment_utils.py  debugging_session_displacement.py  estimate_session_histogram.py  histogram1.npy  histogram2.npy  histogram3.npy  main.py  mp_funcs.py  peak_locs_1.npy  peak_locs_2.npy  peak_locs_3.npy  peaks_1.npy  peaks_2.npy  peaks_3.npy  playing.py  playing2.py  playing_inter-session-alignment.py  playing_with_estimate_time.py  plotting.py  run_sbatch.sh  session_alignment.py  sim_histogram_alignment.py  test_session_alignment.py  two_session_benchmarking.py
debugging/benchmarking/: mp_funcs.py  two_session_benchmarking.py
debugging/old/: debugging_session_displacement.py  estimate_session_histogram.py
debugging/simulating/: playing_with_estimate_time.py  sim_histogram_alignment.py
doc/: References.rst  api.rst  authors.rst  codeofconduct.rst  conf.py  containerized_sorters.rst  contribute.rst  governance.rst  implement_recording_extractor.rst  implement_sorting_extractor.rst  implement_spike_sorter.rst  import.rst  index.rst  install_sorters.rst  installation.rst  module_comparison.rst  module_core.rst  module_exporters.rst  module_extractors.rst  module_postprocessing.rst  module_preprocessing.rst  module_qualitymetrics.rst  module_sorters.rst  module_sorting_components.rst  module_toolkit.rst  module_widgets.rst  modules_doc.rst  overview.rst  recording_extractor.rst  references.rst  run_tests.rst  sg_execution_times.rst  sorters_comparison.rst  sortersinfo.rst  sorting_extractor.rst  spike_sorter.rst  supported.rst  supported_formats_and_sorters.rst  tutorials_custom_index.rst  viewers.rst  (+1 more)
doc/development/: development.rst
doc/forhowto/: index.rst  plot_extract_lfps.codeobj.json  plot_extract_lfps.ipynb  plot_extract_lfps.py.md5  plot_extract_lfps.rst  plot_working_with_tetrodes.codeobj.json  plot_working_with_tetrodes.ipynb  plot_working_with_tetrodes.py.md5  plot_working_with_tetrodes.rst
doc/get_started/: import.rst  index.rst  install_sorters.rst  installation.rst  quickstart.rst
doc/how_to/: analyse_neuropixels.rst  analyze_neuropixels.rst  auto_curation_prediction.rst  auto_curation_training.rst  auto_label_units.rst  benchmark_with_hybrid_recordings.rst  build_pipeline_with_dicts.rst  combine_recordings.rst  customize_a_plot.rst  drift_with_lfp.rst  extract_lfps.rst  get_started.rst  getting_started.rst  handle_drift.rst  handle_times.rst  import_kilosort_data.rst  index.rst  inter_session_alignment.rst  load_matalb_data.rst  load_matlab_data.rst  load_your_data_into_sorting.rst  make_a_sorting.rst  physical_units.rst  process_by_channel_group.rst  read_various_formats.rst  unsigned_to_signed.rst  viewers.rst  waveform_extractor_to_sorting_analyzer.md  waveform_extractor_to_sorting_analyzer.rst
doc/how_to_new/: index.rst  plot_combine_recordings.ipynb  plot_combine_recordings.py  plot_combine_recordings.py.md5  plot_combine_recordings.rst  plot_combine_recordings_codeobj.pickle  sg_execution_times.rst
doc/images/: make_comparison_figures.py
doc/in_depth/: curation.rst  index.rst  postprocessing.rst  preprocessing.rst
doc/modules/: benchmark.rst  comparison.rst  core.rst  curation.rst  exporters.rst  index.rst  (+11 more)
examples/: .gitignore  README.rst  plot_sorters_example.py
installation_tips/: README.md  beginner_conda_env_stable.yml  beginner_requirements_rolling.txt  check_your_install.py  cleanup_for_windows.py  full_spikeinterface_environement_rolling_updates.yml  full_spikeinterface_environment.yml  full_spikeinterface_environment_dandi.yml  full_spikeinterface_environment_linux.yml  full_spikeinterface_environment_linux_dandi.yml  full_spikeinterface_environment_mac.yml  full_spikeinterface_environment_rolling_updates.yml  full_spikeinterface_environment_windows.yml  requirements_rolling.txt  requirements_stable.txt
kilosort4_output/: spikeinterface_recording.json
spikeinterface/: __init__.py  comparison.py  extractors.py  full.py  sorters.py  test_import_full.py  toolkit.py  version.py  widgets.py
tests/: test_imports.py
(+2006 files in other folders)
