[project]
name = "spikeinterface"
version = "0.102.3"
authors = [
  { name="Alessio Buccino", email="alessiop.buccino@gmail.com" },
  { name="Samuel Garcia", email="sam.garcia.die@gmail.com" },
]
description = "Python toolkit for analysis, visualization, and comparison of spike sorting output"
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: OS Independent"
]


dependencies = [
    "numpy>=1.20;python_version<'3.13'",
    "numpy>=2.0.0;python_version>='3.13'",
    "threadpoolctl>=3.0.0",
    "tqdm",
    "zarr>=2.18,<3",
    "neo>=0.14.1",
    "probeinterface>=0.2.23",
    "packaging",
    "numcodecs<0.16.0", # For supporting zarr < 3
]

[build-system]
requires = ["setuptools>=78.0.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-data = {"spikeinterface.sorters" = ["**/*.m", "**/*.prm", "**/*.params", "**/*.yaml"]}

[tool.setuptools.exclude-package-data]
spikeinterface = ["**/tests/test_*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["spikeinterface*"]
namespaces = false
exclude = ["spikeinterface.*.tests"]

[tool.black]
line-length = 120

[project.urls]
homepage = "https://github.com/SpikeInterface/spikeinterface"
repository = "https://github.com/SpikeInterface/spikeinterface"
documentation = "https://spikeinterface.readthedocs.io/"
changelog = "https://spikeinterface.readthedocs.io/en/latest/whatisnew.html"


[project.optional-dependencies]

extractors = [
    "MEArec>=1.8",
    "pynwb>=2.6.0",
    "hdmf-zarr>=0.11.0",
    "pyedflib>=0.1.30",
    "sonpy;python_version<'3.10'",
    "lxml", # lxml for neuroscope
    "scipy",
    "ibllib", # streaming IBL
    "pymatreader>=0.0.32", # For cell explorer matlab files
    "zugbruecke>=0.2; sys_platform!='win32'", # For plexon2
]

streaming_extractors = [
    "ibllib", # streaming IBL
    # Following dependencies are for streaming with nwb files
    "pynwb>=2.6.0",
    "fsspec",
    "aiohttp",
    "requests",
    "hdmf-zarr>=0.11.0",
    "remfile",
    "s3fs"
]


preprocessing = [
    "scipy",
]


full = [
    "h5py",
    "pandas",
    "scipy",
    "scikit-learn",
    "networkx",
    "distinctipy",
    "matplotlib>=3.6", # matplotlib.colormaps
    "cuda-python; platform_system != 'Darwin'",
    "numba",
    "skops",
    "huggingface_hub"
]

widgets = [
    "matplotlib",
    "ipympl",
    "ipywidgets",
    "sortingview>=0.12.0",
]

qualitymetrics = [
    "scikit-learn",
    "scipy",
    "pandas",
    "numba",
]

test_core = [
    "pytest",
    "pytest-dependency",
    "psutil",

    # for github test : probeinterface and neo from master
    # for release we need pypi, so this need to be commented
    # "probeinterface @ git+https://github.com/SpikeInterface/probeinterface.git",
    # "neo @ git+https://github.com/NeuralEnsemble/python-neo.git",
]

test_extractors = [
    # Functions to download data in neo test suite
    "pooch>=1.8.2",
    "datalad>=1.0.2",
    # Commenting out for release
    # "probeinterface @ git+https://github.com/SpikeInterface/probeinterface.git",
    # "neo @ git+https://github.com/NeuralEnsemble/python-neo.git",
]

test_preprocessing = [
    "ibllib", # for IBL
    "torch",
]


test = [
    "pytest",
    "pytest-dependency",
    "pytest-cov",
    "psutil",

    # preprocessing
    "ibllib", # for IBL

    # streaming templates
    "s3fs",

    # tridesclous
    "numba<0.61.0;python_version<'3.13'",
    "numba>=0.61.0;python_version>='3.13'",
    "hdbscan>=0.8.33",  # Previous version had a broken wheel

    # for sortingview backend
    "sortingview>=0.12.0",

    # for motion and sortingcomponents
    "torch",

    # curation
    "skops",
    "huggingface_hub",

    # for github test : probeinterface and neo from master
    # for release we need pypi, so this need to be commented
    # "probeinterface @ git+https://github.com/SpikeInterface/probeinterface.git",
    # "neo @ git+https://github.com/NeuralEnsemble/python-neo.git",
]

docs = [
    "Sphinx",
    "sphinx_rtd_theme>=1.2",
    "sphinx-gallery",
    "sphinx-design",
    "numpydoc",
    "ipython",
    "sphinxcontrib-jquery",

    # for notebooks in the gallery
    "MEArec", # Use as an example
    "pandas", # in the modules gallery comparison tutorial
    "hdbscan>=0.8.33",   # For sorters spykingcircus2 + tridesclous
    "numba", # For many postprocessing functions
    "networkx",
    "skops", # For automated curation
    "scikit-learn", # For automated curation
    # Download data
    "pooch>=1.8.2",
    "datalad>=1.0.2",

    # for release we need pypi, so this needs to be commented
    # "probeinterface @ git+https://github.com/SpikeInterface/probeinterface.git",  # We always build from the latest version
    # "neo @ git+https://github.com/NeuralEnsemble/python-neo.git",  # We always build from the latest version
]

dev = [
    "spikeinterface[test]",
    "spikeinterface[test_core]",
    "spikeinterface[docs]",
    "black",
    "pre-commit",
]

[tool.pytest.ini_options]
markers = [
    "core",
    "generation",
    "extractors",
    "preprocessing",
    "postprocessing",
    "qualitymetrics",
    "sorters",
    "sorters_external",
    "sorters_internal",
    "comparison",
    "curation",
    "exporters",
    "widgets",
    "sortingcomponents",
    "streaming_extractors: extractors that require streaming such as ross and fsspec",
]
filterwarnings =[
    'ignore:.*distutils Version classes are deprecated.*:DeprecationWarning',
    'ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning',
]
