[project]
name = "spikeinterface"
version = "0.104.1"
authors = [
  { name="Alessio Buccino", email="alessiop.buccino@gmail.com" },
  { name="Samuel Garcia", email="sam.garcia.die@gmail.com" },
]
description = "Python toolkit for analysis, visualization, and comparison of spike sorting output"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: OS Independent"
]


dependencies = [
    "numpy>=1.20;python_version<'3.13'",
    "numpy>=2.0.0;python_version>='3.13'",
    "threadpoolctl>=3.0.0",
    "tqdm",
    "zarr>=2.18,<3",
    "neo>=0.14.4",
    "probeinterface>=0.3.2",
    "packaging",
    "pydantic",
    "numcodecs<0.16.0", # For supporting zarr < 3
]

[build-system]
requires = ["setuptools>=78.0.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-data = {"spikeinterface.sorters" = ["**/*.m", "**/*.prm", "**/*.params", "**/*.yaml"]}

[tool.setuptools.exclude-package-data]
spikeinterface = ["**/tests/test_*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["spikeinterface*"]
namespaces = false
exclude = ["spikeinterface.*.tests"]

[tool.black]
line-length = 120

[project.urls]
homepage = "https://github.com/SpikeInterface/spikeinterface"
repository = "https://github.com/SpikeInterface/spikeinterface"
documentation = "https://spikeinterface.readthedocs.io/"
changelog = "https://spikeinterface.readthedocs.io/en/latest/whatisnew.html"


[project.optional-dependencies]

extractors = [
    "MEArec>=1.8",
    "pynwb>=2.6.0",
    "hdmf-zarr>=0.11.0",
    "pyedflib>=0.1.30",
    "sonpy;python_version<'3.10'",
    "lxml", # lxml for neuroscope
    "scipy",
    "ibllib>=3.4.1;python_version>='3.10'", # streaming IBL
    "pymatreader>=0.0.32", # For cell explorer matlab files
    "zugbruecke>=0.2; sys_platform!='win32'", # For plexon2
]

streaming_extractors = [
    "ibllib>=3.4.1;python_version>='3.10'", # streaming IBL
    # Following dependencies are for streaming with nwb files
    "pynwb>=2.6.0",
    "fsspec",
    "aiohttp",
    "requests",
    "hdmf-zarr>=0.11.0",
    "remfile",
    "s3fs"
]


preprocessing = [
    "scipy",
]

postprocessing = [
    "spikeinterface[preprocessing]",
    "scipy",
    "scikit-learn<1.8",
    "numba>=0.59",
    "matplotlib>=3.6",
]

metrics = [
    "scikit-learn<1.8",
    "scipy",
    "pandas<3",
    "numba>=0.59",
]

comparison = [
    "scipy",
    "pandas<3",
    "networkx",
]

generation = [
    "scipy",
    "pandas<3",
]

sorters = [
    "scipy",
    "h5py",
    "cuda-python>=11.8.6; platform_system != 'Darwin'",
]

sortingcomponents = [
    "spikeinterface[preprocessing]",
    "scipy",
    "scikit-learn<1.8",
    "numba>=0.59",
    "networkx",
    "hdbscan>=0.8.33",
    # `torch` is an optional heavy dep used by neural-network peak detection,
    # motion estimation, and template matching. Install separately if needed:
    # pip install torch
]

sorters_internal = [
    "spikeinterface[sortingcomponents]",
    "spikeinterface[preprocessing]",
]

curation = [
    "spikeinterface[metrics]",
    "spikeinterface[postprocessing]",
    "spikeinterface[comparison]",
    "pandas<3",
    "scikit-learn<1.8",
    "skops",
    "huggingface_hub",
    "numba>=0.59",
    "networkx",
]

exporters = [
    "spikeinterface[postprocessing]",
    "spikeinterface[widgets]",
    "pandas<3",
    "pynapple",
]

widgets = [
    "matplotlib>=3.6",
    "ipympl",
    "ipywidgets",
    "figpack",
    "figpack-spike-sorting",
    "distinctipy",
]

# `full` installs every module's optional feature deps. Defined as the union of
# per-module extras so adding a dep to a module propagates here automatically.
full = [
    "spikeinterface[preprocessing]",
    "spikeinterface[postprocessing]",
    "spikeinterface[metrics]",
    "spikeinterface[comparison]",
    "spikeinterface[generation]",
    "spikeinterface[sorters]",
    "spikeinterface[sortingcomponents]",
    "spikeinterface[sorters_internal]",
    "spikeinterface[curation]",
    "spikeinterface[exporters]",
    "spikeinterface[widgets]",
]

docs = [
    "Sphinx",
    "ipython",
    "sphinx_rtd_theme>=1.2",
    "sphinx-gallery",
    "sphinx-design",
    "numpydoc",
    "sphinxcontrib-jquery",
    "autodoc_pydantic",

    # for notebooks in the gallery
    "MEArec", # Use as an example
    "pandas<3", # in the modules gallery comparison tutorial
    "hdbscan>=0.8.33",   # For sorters spykingcircus2 + tridesclous
    "numba", # For many postprocessing functions
    "networkx",
    "seaborn",
    "skops", # For automated curation
    "scikit-learn<1.8", # For automated curation
    "huggingface_hub", # For automated curation

    # for release we need pypi, so this needs to be commented
    "probeinterface @ git+https://github.com/SpikeInterface/probeinterface.git",  # We always build from the latest version
    "neo @ git+https://github.com/NeuralEnsemble/python-neo.git",  # We always build from the latest version
]

dev = [
    "spikeinterface[docs]",
    "black",
    "pre-commit",
]

[dependency-groups]
# Shared test infrastructure used by every per-module group. The neo and
# probeinterface git pins match CI behavior before the PEP 735 migration.
# For a release, comment the two git lines out.
test-common = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "psutil",
    "probeinterface @ git+https://github.com/SpikeInterface/probeinterface.git",
    "neo @ git+https://github.com/NeuralEnsemble/python-neo.git",
]

test-core = [
    {include-group = "test-common"},
    "pandas<3",
]

test-extractors = [
    {include-group = "test-common"},
    "pooch>=1.8.2",
    "datalad>=1.0.2",
]

test-streaming-extractors = [
    {include-group = "test-common"},
    "pooch>=1.8.2",
    "datalad>=1.0.2",
    "remfile",
    "requests",
    "aiohttp",
    "fsspec",
    "s3fs",
]

test-preprocessing = [
    {include-group = "test-common"},
    "ibllib>=3.4.1;python_version>='3.10'",
    "pooch",
    "datalad",
    "torch",  # preprocessing tests exercise sortingcomponents.motion.dredge
]

test-postprocessing = [
    {include-group = "test-common"},
    "pandas<3",
    ]
test-metrics = [{include-group = "test-common"}]

test-comparison = [
    {include-group = "test-common"},
    "numba>=0.59"
    ]

test-sorters-internal = [
    {include-group = "test-common"},
    "torch",  # spyking_circus2 template matching
    "hdbscan>=0.8.33",  # simplesorter / tridesclous2
]
test-sorters = [{include-group = "test-sorters-internal"}]
test-curation = [{include-group = "test-common"}]

test-widgets = [
    {include-group = "test-common"},
    "sortingview>=0.12.0",
    "numba>=0.59",  # For motion widget
    "scikit-learn",
    "pyvips",
    "networkx",
]

test-exporters = [{include-group = "test-common"}]
test-sortingcomponents = [
    {include-group = "test-common"},
    "torch",  # neural network peak detection, motion, matching
    "huggingface_hub", # for `test_single_channel_toy_denoiser_in_peak_pipeline`
]
test-generation = [
    {include-group = "test-common"},
    "fsspec",
    "s3fs",
    "numba>=0.59", # numba and sklearn needed for motion correction of
    "scikit-learn", # syntheic data used in `test_generate_hybrid_motion`
    ]

# Aggregate group for workflows that run the full test suite (nightly codecov).
test-all = [
    {include-group = "test-core"},
    {include-group = "test-extractors"},
    {include-group = "test-streaming-extractors"},
    {include-group = "test-preprocessing"},
    {include-group = "test-postprocessing"},
    {include-group = "test-metrics"},
    {include-group = "test-comparison"},
    {include-group = "test-sorters"},
    {include-group = "test-sorters-internal"},
    {include-group = "test-curation"},
    {include-group = "test-widgets"},
    {include-group = "test-exporters"},
    {include-group = "test-sortingcomponents"},
    {include-group = "test-generation"},
]

[tool.pytest.ini_options]
testpaths = ["src"]
markers = [
    "core",
    "generation",
    "extractors",
    "preprocessing",
    "postprocessing",
    "mertrics",
    "sorters",
    "sorters_external",
    "sorters_internal",
    "comparison",
    "curation",
    "exporters",
    "widgets",
    "sortingcomponents",
    "streaming_extractors: extractors that require streaming such as ross and fsspec",
]
filterwarnings =[
    'ignore:.*distutils Version classes are deprecated.*:DeprecationWarning',
    'ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning',
]
